--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -2,7 +2,7 @@
 
 {% block upper_left %}
     <div class="nav-container">
-        <a href="{{ url_for('configure_index') }}">General Setup</a>
+        <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
     </div>
 {% endblock %}
 
@@ -87,9 +87,9 @@
         <br>
         <label for="slots">Equipment Slots:</label>
         <textarea id="slots" name="slots" rows="5" cols="15">{{ '\n'.join(current.slots) }}</textarea><br>
-        <div style="margin-top: 20px;">
+        <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Continue</button>
-            <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Cancel Changes</button>
+            <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Don't Save</button>
         </div>
     </form>
     <script>
