--- a/app/templates/session/upload.html
+++ b/app/templates/session/upload.html
@@ -1,10 +1,18 @@
 {% extends 'base.html' %}
 
+{% block upper_left %}
+    <div class="nav-container">
+        <a class="upper-left" href="{{ url_for('overview') }}">Continue Game</a>
+        <span class="separator">|</span>
+        <a href="{{ url_for('configure_index') }}">Setup</a>
+    </div>
+{% endblock %}
+
 {% block content %}
-<h1>Upload a Game File</h1>
-<p>Restore a game by loading a file that was downloaded to your computer previously.</p>
-<form action="{{ url_for('load_from_file') }}" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" accept=".json">
-    <button type="submit">Upload</button>
-</form>
+    <h1>Upload a Game File</h1>
+    <p>Restore a game by loading a file that was downloaded to your computer previously.</p>
+    <form action="{{ url_for('load_from_file') }}" method="POST" enctype="multipart/form-data">
+        <input type="file" name="file" accept=".json">
+        <button type="submit">Upload</button>
+    </form>
 {% endblock %}
