--- a/app/templates/session/upper_right_menu.html
+++ b/app/templates/session/upper_right_menu.html
@@ -3,7 +3,8 @@
     <span class="dropdown-container">
         <span class="dropdown-icon">&#9662;</span>
         <div class="dropdown-menu">
-            <a href="{{ url_for('change_user') }}">Change Username</a><br>
+            <a href="{{ url_for('session_users') }}">Session Users</a><br>
+            <a href="{{ url_for('change_user') }}">Change User ID</a><br>
             <a href="{{ url_for('get_session_link') }}">Get Session Link</a><br>
         </div>
     </span>
