--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -1,18 +1,14 @@
 {% extends 'base.html' %}
 
+{% block upper_left %}
+    <div class="nav-container">
+        <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
+    </div>
+{% endblock %}
+
 {% block content %}
     <h1>Attribute Setup</h1>
     <p class="info">Stat or state of a character or item, such as Strength, or Poisoned.</p>
-<!--
-    <p class="info">Stat or state of a character or item. For example, it could be something like these:
-    <li>Strength &mdash; character trait used to determine outcomes
-    <li>Damage Bonus &mdash; multiplier for an item
-    <li>Current HP &mdash; state
-    <li>Max HP &mdash; character statistic, or item stat that affects the character stat
-    <li>Poisoned &mdash; temporary status condition, a number that goes to 0 after a few turns
-    <li>Satiation &mdash; status such as Very Full (95) that slowly decreases over time
-    <li>Posture &mdash; state such as standing or crawling</p>
--->
     <p class="info">Alternatively, set up an item to represent a status
     that needs to be incremented,
     such as the remaining HP of a tree to be felled.</p>
@@ -22,9 +18,12 @@
         <label for="attrib-description" >Description:</label>
         <textarea id="attrib-description" name="attrib_description" rows="4" cols="50">{{ current.description }}</textarea><br>
 
-        <button type="submit" id="btn-save" name="save_changes">Save and Continue</button>
-        <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Cancel Changes</button>
-        <button type="submit" id="btn-delete" name="delete_attrib" class="dangerous-button">Delete Attribute</button>
+        <div class="footer-buttons">
+            <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
+            <button type="submit" id="btn-duplicate" name="make_duplicate">Save and Duplicate</button>
+            <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Close without Saving</button>
+            <button type="submit" id="btn-delete" name="delete_attrib" class="dangerous-button">Delete Attribute</button>
+        </div>
     </form>
     <script>
         $(document).ready(function() {
