--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -2,13 +2,15 @@
 
 {% block upper_left %}
     <div class="nav-container">
-        <a href="{{ url_for('configure_index') }}">Change Setup</a>
+        <a href="{{ url_for('configure_index') }}">Game S[e]tup</a>
     </div>
 {% endblock %}
 
 {% block content %}
     <script>
-        const linkForKey = {};
+        const linkForKey = {
+            'e': '{{ url_for('configure_index') }}'
+        };
         document.addEventListener('DOMContentLoaded', function () {
             document.addEventListener('keypress', function (event) {
                 const key = event.key.toLowerCase();
@@ -26,30 +28,6 @@
         {{ current.title }}
         </h1>
     <p class="info">{{ current.description }}</p>
-
-    <!-- Players -->
-    {% if interactions %}
-    <table>
-        <tr>
-            <th>Player</th>
-            <th>Most Recent Interaction</th>
-        </tr>
-        {% for interaction in interactions %}
-            {% set link = interaction.action_link %}
-            {% set letter = link_letters.next(link) %}
-            <script>
-                linkForKey['{{ letter }}'] = "{{ link }}";
-            </script>
-            <tr>
-                <td{% if interaction.username == current_username %} class="username"{% endif %}>{{ interaction.username }}</td>
-                <td>
-                    <span>[{{ letter }}]</span>
-                    <a href="{{ link }}">{{ interaction.action_display() }}</a>
-                </td>
-            </td></tr>
-        {% endfor %}
-    </table>
-    {% endif %}
 
     <!-- Top-level Events -->
     {% if other_entities.events %}
@@ -69,7 +47,7 @@
     {% if charlist %}
         <table>
             <tr>
-                <th>Characters</th>
+                <th>Character</th>
                 <th>At</th>
             </tr>
             {% for char in charlist %}
