--- a/app/templates/session/session_link.html
+++ b/app/templates/session/session_link.html
@@ -10,6 +10,6 @@
 
 {% block content %}
     <h1>Session Link</h1>
-    <p>Share the following link to join the current game.</p>
+    <p class="info">Share the following link to join the current game.</p>
     <p><a href="{{ url }}">{{ url }}</a></p>
 {% endblock %}
