--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -30,12 +30,12 @@
     <p class="info">{{ current.description }}</p>
 
     <!-- Top-level Events -->
-    {% if other_entities.events %}
+    {% if active.events %}
         <div class="popup-button" style="margin-bottom: 20px">
             <button>Events <span class="dropdown-icon">&#9662;</span></button>
             <div class="popup-frame">
                 <div class="popup-list">
-                    {% for event in other_entities.events %}
+                    {% for event in active.events %}
                         <a href="{{ url_for('play_event', event_id=event.id) }}">{{ event.name }}</a>
                     {% endfor %}
                 </div>
@@ -44,13 +44,13 @@
     {% endif %}
 
     <!-- Top-level Characters and their Location -->
-    {% if charlist %}
+    {% if active.characters %}
         <table>
             <tr>
                 <th>Character</th>
                 <th>At</th>
             </tr>
-            {% for char in charlist %}
+            {% for char in active.characters %}
                 <tr><td>
                     {% if char.char_id %}
                         {% set link = url_for('play_char', char_id=char.char_id) %}
@@ -76,14 +76,36 @@
         </table>
     {% endif %}
 
+    <!-- Top-level Locations -->
+    {% if active.locations %}
+        <table cellspacing="0" cellpadding="5">
+            <tr>
+                <th>Locations</th>
+            </tr>
+            {% for loc in active.locations %}
+                {% set link = url_for('play_location', loc_id=loc.id) %}
+                {% set letter = link_letters.next(link) %}
+                <script>
+                    linkForKey['{{ letter }}'] = "{{ link }}";
+                </script>
+                <tr>
+                    <td>
+                        <span>[{{ letter }}]</span>
+                        <a href="{{ link }}">{{ loc.name }}</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% endif %}
+
     <!-- Items in General Storage -->
-    {% if other_entities.items %}
+    {% if active.items %}
         <table cellspacing="0" cellpadding="5">
             <tr>
                 <th>General Storage</th>
                 <th>Quantity</th>
             </tr>
-            {% for item in other_entities.items %}
+            {% for item in active.items %}
                 {% set link = url_for('play_item', item_id=item.id, main='universal') %}
                 {% set letter = link_letters.next(link) %}
                 <script>
@@ -103,7 +125,7 @@
     <script>
         $(document).ready(function() {
             function updateQuantities() {
-                {% for item in other_entities.items %}
+                {% for item in active.items %}
                     // Make AJAX request for item quantity
                     $.get('/item/progress/{{ item.id }}', function(data) {
                         $('#item-{{ item.id }}-quantity').text(data.quantity);
